--- a/index.html
+++ b/index.html
@@ -22,6 +22,14 @@
 			<th>z</th>
 			<td id="zVal"></val>
 		</tr>
+        <tr>
+			<th>temp</th>
+			<td id="tVal"></val>
+		</tr>
+        <tr>
+			<th>count</th>
+			<td id="cVal"></val>
+		</tr>        
 	</table>
     <audio class = "sound1" id="sound">
     	<source src="sound1.mp3" type="audio/mpeg">
