--- a/index.html
+++ b/index.html
@@ -29,7 +29,11 @@
         <tr>
 			<th>count</th>
 			<td id="cVal"></val>
-		</tr>        
+		</tr>
+        <tr>
+			<th>count1</th>
+			<td id="aVal"></val>
+		</tr>                   
 	</table>
     <audio class = "sound1" id="sound">
     	<source src="sound1.mp3" type="audio/mpeg">
