--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 			<td id="aVal"></val>
 		</tr>                   
 	</table>
-    <audio id="sound">
+    <audio id="ssound">
     	<source src="sound1.mp3" type="audio/mpeg">
     </audio>
 </body>
