--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 		</tr>                   
 	</table>
     <audio id="ssound">
-    	<source src="sound1.mp3" type="audio/mpeg">
+    	<source src="https://github.com/hyunmoo/P3/blob/gh-pages/sound1.mp3?raw=true" type="audio/mpeg">
     </audio>
 </body>
 </html>
