--- a/index.html
+++ b/index.html
@@ -35,6 +35,7 @@
 			<td id="aVal"></val>
 		</tr>                   
 	</table>
+    <img id=m0 src="m_0.jpg"/>
     <audio id="ssound">
     	<source src="https://github.com/hyunmoo/P3/blob/gh-pages/sound1.mp3?raw=true" type="audio/mpeg">
     </audio>
