--- a/index.html
+++ b/index.html
@@ -35,7 +35,10 @@
 			<td id="aVal"></val>
 		</tr>                   
 	</table>
-    <img id=m0 src="m_0.jpg"/>
+
+
+	<img id="im" src="m_0.jpg"/>
+
     <audio id="ssound">
     	<source src="https://github.com/hyunmoo/P3/blob/gh-pages/sound1.mp3?raw=true" type="audio/mpeg">
     </audio>
