--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 	<img id="im" src="m_0.jpg"/>
 
     <audio id="ssound">
-    	<source src="https://github.com/hyunmoo/P3/blob/gh-pages/sound1.mp3?raw=true" type="audio/mpeg">
+    	<source src="sound1.mp3" type="audio/mpeg">
     </audio>
 </body>
 </html>
